; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_ssbi.c_ssbi_write_bytes.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_ssbi.c_ssbi_write_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssbi = type { i64 }

@MSM_SBI_CTRL_SSBI2 = common dso_local global i64 0, align 8
@SSBI2_MODE2 = common dso_local global i32 0, align 4
@SSBI_STATUS_READY = common dso_local global i32 0, align 4
@SSBI2_CMD = common dso_local global i32 0, align 4
@SSBI_STATUS_MCHN_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ssbi*, i32, i32*, i32)* @ssbi_write_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssbi_write_bytes(%struct.ssbi* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.ssbi*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.ssbi* %0, %struct.ssbi** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %11 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %12 = getelementptr inbounds %struct.ssbi, %struct.ssbi* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @MSM_SBI_CTRL_SSBI2, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %27

16:                                               ; preds = %4
  %17 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %18 = load i32, i32* @SSBI2_MODE2, align 4
  %19 = call i32 @ssbi_readl(%struct.ssbi* %17, i32 %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @SET_SSBI_MODE2_REG_ADDR_15_8(i32 %20, i32 %21)
  store i32 %22, i32* %10, align 4
  %23 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* @SSBI2_MODE2, align 4
  %26 = call i32 @ssbi_writel(%struct.ssbi* %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %16, %4
  br label %28

28:                                               ; preds = %54, %27
  %29 = load i32, i32* %8, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %59

31:                                               ; preds = %28
  %32 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %33 = load i32, i32* @SSBI_STATUS_READY, align 4
  %34 = call i32 @ssbi_wait_mask(%struct.ssbi* %32, i32 %33, i32 0)
  store i32 %34, i32* %9, align 4
  %35 = load i32, i32* %9, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %31
  br label %60

38:                                               ; preds = %31
  %39 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %40 = load i32, i32* %6, align 4
  %41 = and i32 %40, 255
  %42 = shl i32 %41, 16
  %43 = load i32*, i32** %7, align 8
  %44 = load i32, i32* %43, align 4
  %45 = or i32 %42, %44
  %46 = load i32, i32* @SSBI2_CMD, align 4
  %47 = call i32 @ssbi_writel(%struct.ssbi* %39, i32 %45, i32 %46)
  %48 = load %struct.ssbi*, %struct.ssbi** %5, align 8
  %49 = load i32, i32* @SSBI_STATUS_MCHN_BUSY, align 4
  %50 = call i32 @ssbi_wait_mask(%struct.ssbi* %48, i32 0, i32 %49)
  store i32 %50, i32* %9, align 4
  %51 = load i32, i32* %9, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %38
  br label %60

54:                                               ; preds = %38
  %55 = load i32*, i32** %7, align 8
  %56 = getelementptr inbounds i32, i32* %55, i32 1
  store i32* %56, i32** %7, align 8
  %57 = load i32, i32* %8, align 4
  %58 = add nsw i32 %57, -1
  store i32 %58, i32* %8, align 4
  br label %28

59:                                               ; preds = %28
  br label %60

60:                                               ; preds = %59, %53, %37
  %61 = load i32, i32* %9, align 4
  ret i32 %61
}

declare dso_local i32 @ssbi_readl(%struct.ssbi*, i32) #1

declare dso_local i32 @SET_SSBI_MODE2_REG_ADDR_15_8(i32, i32) #1

declare dso_local i32 @ssbi_writel(%struct.ssbi*, i32, i32) #1

declare dso_local i32 @ssbi_wait_mask(%struct.ssbi*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
